--- a/l10n_ve_withholding_tax_liquor/i18n/es_VE.po
+++ b/l10n_ve_withholding_tax_liquor/i18n/es_VE.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-10-30 13:17+0000\n"
-"PO-Revision-Date: 2024-10-30 09:21-0400\n"
+"PO-Revision-Date: 2024-10-30 13:17+0000\n"
 "Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
 "Language: es_VE\n"
@@ -19,28 +19,28 @@ msgstr ""
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report_line__base_amount
-msgid "Base imponible"
+msgid "Taxable base"
 msgstr "Base imponible"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields.selection,name:l10n_ve_withholding_tax_liquor.selection__account_liquor_tax_report__state__draft
-msgid "Borrador"
+msgid "Draft"
 msgstr "Borrador"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__company_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report_line__company_id
-msgid "Compañía"
+msgid "Company"
 msgstr "Compañía"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields.selection,name:l10n_ve_withholding_tax_liquor.selection__account_liquor_tax_report__state__confirmed
-msgid "Confirmado"
+msgid "Confirmed"
 msgstr "Confirmado"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Confirmar"
+msgid "Confirm"
 msgstr "Confirmar"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -59,12 +59,12 @@ msgstr "Creado en"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Descripción"
+msgid "Description"
 msgstr "Descripción"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__date_from
-msgid "Desde"
+msgid "From"
 msgstr "Desde"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -76,22 +76,22 @@ msgstr "Nombre a Mostrar"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.constraint,message:l10n_ve_withholding_tax_liquor.constraint_account_liquor_tax_check_rate
-msgid "El importe debe estar en un rango mayor a 0 y menor o igual a 100."
+msgid "The amount must be in a range greater than 0 and less than or equal to 100."
 msgstr "El importe debe estar en un rango mayor a 0 y menor o igual a 100."
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__state
-msgid "Estado"
+msgid "State"
 msgstr "Estado"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Generar lineas"
+msgid "Generate lines"
 msgstr "Generar lineas"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__date_to
-msgid "Hasta"
+msgid "To"
 msgstr "Hasta"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -103,12 +103,12 @@ msgstr "ID"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report_line__liquor_tax_id
-msgid "Impuesto"
+msgid "Tax"
 msgstr "Impuesto"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model,name:l10n_ve_withholding_tax_liquor.model_account_liquor_tax
-msgid "Impuesto al licor"
+msgid "Liquor tax"
 msgstr "Impuesto al licor"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -118,7 +118,7 @@ msgstr "Impuesto al licor"
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_product_template__liquor_tax_ids
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_sale_order_line__liquor_tax_ids
 #: model:ir.ui.menu,name:l10n_ve_withholding_tax_liquor.menu_account_liquor_tax
-msgid "Impuestos por venta de licor"
+msgid "Liquor sales tax"
 msgstr "Impuestos por venta de licor"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -150,44 +150,44 @@ msgstr "Última actualización en"
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__line_ids
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Lineas"
+msgid "Lines"
 msgstr "Lineas"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model,name:l10n_ve_withholding_tax_liquor.model_account_liquor_tax_report_line
-msgid "Lineas reporte impuesto sobre venta de licor"
+msgid "Lines report tax on liquor sales"
 msgstr "Lineas reporte impuesto sobre venta de licor"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__currency_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report_line__currency_id
-msgid "Moneda fiscal"
+msgid "Fiscal currency"
 msgstr "Moneda fiscal"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report__name
-msgid "Nombre"
+msgid "Name"
 msgstr "Nombre"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax__name
-msgid "Nombre del impuesto"
+msgid "Name of the tax"
 msgstr "Nombre del impuesto"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields.selection,name:l10n_ve_withholding_tax_liquor.selection__account_liquor_tax_report__state__paid
-msgid "Pagado"
+msgid "Paid"
 msgstr "Pagado"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Pagar"
+msgid "Pay"
 msgstr "Pagar"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax__rate
 #: model:ir.model.fields,field_description:l10n_ve_withholding_tax_liquor.field_account_liquor_tax_report_line__rate
-msgid "Porcentaje"
+msgid "Percentage"
 msgstr "Porcentaje"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -202,18 +202,18 @@ msgstr "Reporte"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model,name:l10n_ve_withholding_tax_liquor.model_account_liquor_tax_report
-msgid "Reporte impuesto sobre venta de licor"
+msgid "Report tax on liquor sales"
 msgstr "Reporte impuesto sobre venta de licor"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.actions.act_window,name:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_action
 #: model:ir.ui.menu,name:l10n_ve_withholding_tax_liquor.menu_account_liquor_tax_report
-msgid "Reporte impuestos por venta de licor"
+msgid "Report taxes on liquor sales"
 msgstr "Reporte impuestos por venta de licor"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_tax_liquor.account_liquor_tax_report_view_form
-msgid "Restablecer a borrador"
+msgid "Reset to draft"
 msgstr "Restablecer a borrador"
 
 #. module: l10n_ve_withholding_tax_liquor
@@ -223,7 +223,7 @@ msgstr "Línea pedido de venta"
 
 #. module: l10n_ve_withholding_tax_liquor
 #: model:ir.model.constraint,message:l10n_ve_withholding_tax_liquor.constraint_account_liquor_tax_report_line_unique_liquor_tax_per_report
-msgid "Solo se puede tener una linea por tipo de impuesto"
+msgid "You can only have one line per tax type"
 msgstr "Solo se puede tener una linea por tipo de impuesto"
 
 #. module: l10n_ve_withholding_tax_liquor
